@@ -2,12 +2,12 @@ Source: filtergen
 Section: net
 Priority: optional
 Maintainer: Jamie Wilkinson <jaq@debian.org>
-Build-Depends: debhelper (>> 4.0.0), netbase, flex, bison
-Standards-Version: 3.6.2
+Build-Depends: debhelper (>= 7), netbase, flex, bison
+Standards-Version: 3.8.3
 
 Package: filtergen
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: packet filter generator for various firewall systems
  filtergen is a packet filter generator.  It compiles a fairly high-level
  description language into iptables, ipchains, or ipfilter scripts (and has
