@@ -7,6 +7,11 @@ Upstream Author: Jamie Wilkinson <jaq@spacepants.org>
 
 Copyright:
 
+ Copyright (c) 2002 Matthew Kirkwood
+ Copyright (c) 2003-2009 Jamie Wilkinson
+
+License:
+
    This package is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; version 2 dated June, 1991.
@@ -22,5 +27,5 @@ Copyright:
    02111-1307, USA.
 
 On Debian GNU/Linux systems, the complete text of the GNU General
-Public License can be found in `/usr/share/common-licenses/GPL'.
+Public License can be found in `/usr/share/common-licenses/GPL-2'.
 
